# yaralyzer

./: .flake8  .gitignore  .yaralyzer.example  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
api/: index.html
api/argument_parser/: index.html
api/bytes_decoder/: index.html
api/bytes_match/: index.html
api/character_encodings/: index.html
api/classproperty/: index.html
api/cli_option_validators/: index.html
api/config/: index.html
api/console/: index.html
api/decoding_attempt/: index.html
api/decoding_attempts_table/: index.html
api/decoding_table_row/: index.html
api/encoding_assessment/: index.html
api/encoding_detector/: index.html
api/error/: index.html
api/exceptions/: index.html
api/file_export/: index.html
api/file_hashes_table/: index.html
api/regex_match_metrics/: index.html
api/rich_console/: index.html
api/theme/: index.html
api/timeout/: index.html
api/yara_match/: index.html
api/yara_rule_builder/: index.html
api/yaralyzer/: index.html
doc/: new_release_social_media_template.txt
doc/mkdocs/: index.md
docs/: index.md
scripts/: build_docs.sh  build_yara_error_codes_dict.py  generate_random_binary.py  poetry_install.sh  rebuild_pytest_fixtures.sh  render_help.py  render_help.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_config.py  test_yaralyze.py  test_yaralyzer.py
tests/file_fixtures/: il_tulipano_nero.txt  tulips.yara
tests/file_fixtures/rendered/: il_tulipano_nero.txt_scanned_with_tulip.1,2500tulip__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara,pdf_rule.yara__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara__maxdecode256.txt  random_bytes.bin_scanned_with_3Hl0__maxdecode256.txt
tests/file_fixtures/yara_rules/: tulips.yara
tests/fixtures/rendered/: il_tulipano_nero.txt_scanned_with_pdf_rule.yara,tulips.yara__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulip.1,2500tulip__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara__suppress_decodes__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara__suppress_decodes_table__maxdecode256.txt  il_tulipano_nero.txt_scanned_with_tulips.yara__suppress_decoding_attempts__maxdecode256.txt  random_bytes.bin_scanned_with_3Hl0__maxdecode256.txt  random_bytes.bin_scanned_with_e0_9a_3f_51_dd_25_ce_4c__maxdecode256.txt  random_bytes.bin_scanned_with_tulips.yara__maxdecode256.html  random_bytes.bin_scanned_with_tulips.yara__maxdecode256.json  random_bytes.bin_scanned_with_tulips.yara__maxdecode256.txt
tests/fixtures/yara_rules/: pdf_rule.yara  tulips.yara
tests/helpers/: test_bytes_helper.py  test_file_helper.py  test_list_helper.py  test_rich_text_helper.py  test_string_helper.py  test_string_helpers.py
tests/output/: test_regex_match_metrics.py
tests/util/: test_argument_parser.py  test_logging.py
tests/util/helpers/: test_bytes_helper.py  test_collections_helper.py  test_env_helper.py  test_file_helper.py  test_rich_helper.py
tests/yara/: test_yara_rule_builder.py
yaralyzer/: __init__.py  binary_scanner.py  bytes_match.py  config.py  yaralyzer.py
yaralyzer/decoding/: bytes_decoder.py  decoding_attempt.py
yaralyzer/encoding_detection/: character_encodings.py  encoding_assessment.py  encoding_detector.py
yaralyzer/helpers/: bytes_helper.py  dict_helper.py  env_helper.py  file_helper.py  list_helper.py  rich_text_helper.py  shell_helper.py  string_helper.py
yaralyzer/output/: console.py  decoding_attempts_table.py  decoding_table_row.py  file_export.py  file_hashes_table.py  layout.py  regex_match_metrics.py  rich_console.py  rich_layout_elements.py  theme.py
yaralyzer/util/: argument_parser.py  classproperty.py  cli_option_validators.py  constants.py  exceptions.py  logging.py  timeout.py
yaralyzer/util/cli_options/: cli_option_validators.py  option_validator.py
yaralyzer/util/helpers/: arguments_helper.py  bytes_helper.py  cli_option_validators.py  collections_helper.py  debug_helper.py  dict_helper.py  env_helper.py  file_helper.py  rich_helper.py  shell_helper.py  string_helper.py
yaralyzer/yara/: error.py  yara_match.py  yara_rule_builder.py
