[tool.poetry]
name = "yaralyzer"
version = "1.0.7"
description = "Visualize and force decode YARA and regex matches found in a file or byte stream. With colors. Lots of colors."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/michelcrypt4d4mus/yaralyzer"
repository = "https://github.com/michelcrypt4d4mus/yaralyzer"
documentation = "https://github.com/michelcrypt4d4mus/yaralyzer"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Visualization",
]

include = [
    "CHANGELOG.md",
    "LICENSE",
    ".yaralyzer.example"
]

keywords = [
    "ascii art",
    "binary",
    "character encoding",
    "color",
    "cybersecurity",
    "data visualization",
    "decode",
    "DFIR",
    "encoding",
    "infosec",
    "maldoc",
    "malicious",
    "malware",
    "malware analysis",
    "regex",
    "regular expressions",
    "reverse engineering",
    "reversing",
    "security",
    "threat assessment",
    "threat hunting",
    "threat intelligence",
    "threat research",
    "threatintel",
    "visualization",
    "yara",
]


#####################
#   Dependencies    #
#####################
[tool.poetry.dependencies]
python = "^3.9"
chardet = ">=5.0.0,<6.0.0"
python-dotenv = "^0.21.0"
rich = "^14.1.0"
rich-argparse-plus = "^0.3.1"
yara-python = "^4.5.4"
#plyara = "^2.1.1"  # TODO: use plyara for YARA rule parsing and validation

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^7.1.3"


#############
#  Scripts  #
#############
[tool.poetry.scripts]
yaralyze = 'yaralyzer:yaralyze'
yaralyzer_show_color_theme = 'yaralyzer.helpers.rich_text_helper:yaralyzer_show_color_theme'


#####################
#     PyPi URLs     #
#####################
[tool.poetry.urls]
Changelog = "https://github.com/michelcrypt4d4mus/yaralyzer/blob/master/CHANGELOG.md"


###############################
#     Poetry build system     #
###############################
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
