[tool.poetry]
name = "yaralyzer"
version = "1.3.14"
description = "Visualize and force decode YARA and regex matches found in a file or byte stream with colors. Lots of colors."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

homepage = "https://github.com/michelcrypt4d4mus/yaralyzer"
repository = "https://github.com/michelcrypt4d4mus/yaralyzer"
documentation = "https://michelcrypt4d4mus.github.io/yaralyzer/"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Visualization",
]

include = [
    "CHANGELOG.md",
    "LICENSE",
    ".yaralyzer.example"
]

keywords = [
    "ascii art",
    "binary",
    "character encoding",
    "color",
    "cybersecurity",
    "data visualization",
    "decode",
    "DFIR",
    "encoding",
    "infosec",
    "maldoc",
    "malicious",
    "malware",
    "malware analysis",
    "regex",
    "regular expressions",
    "reverse engineering",
    "reversing",
    "security",
    "threat assessment",
    "threat hunting",
    "threat intelligence",
    "threat research",
    "threatintel",
    "visualization",
    "yara",
]

[tool.poetry.urls]
Changelog = "https://github.com/michelcrypt4d4mus/yaralyzer/blob/master/CHANGELOG.md"


####################
#   Dependencies   #
####################
[tool.poetry.dependencies]
python = "^3.10"
chardet = ">=5.0.0,<6.0.0"
python-dotenv = "^1.1.1"
rich = "14.2.0"
rich-argparse-plus = "^0.3.1"
yara-python = "^4.5.4"
#plyara = "^2.1.1"  # TODO: use plyara for YARA rule parsing and validation

# Extras
cairosvg = {version = "^2.8.2", optional = true}

[tool.poetry.extras]
img = ["cairosvg"]

[tool.poetry.scripts]
yaralyze = 'yaralyzer:yaralyze'


# Dev
[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^7.1.3"
requests = "^2.32.5"


# Docs
[tool.poetry.group.docs.dependencies]
lazydocs = "^0.4.8"
mkdocs = "^1.6.1"
mkdocs-awesome-nav = "^3.1.2"
mkdocs-include-markdown-plugin = "^7.1.7"
mkdocs-material = "^9.6.19"
pydocstyle = "^6.3.0"


#################
#  Build Stuff  #
#################
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pydocstyle]
match-dir = "yaralyzer"
ignore = [
    "D200",  # One-line docstring should fit on one line with quotes (found 3)
    "D203",  # 1 blank line required before class docstring"
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line should be in imperative mood"
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D413",  # Missing blank line after last section
]

[tool.pytest.ini_options]
addopts = [
    # "--import-mode=importlib",
    "-v",
]
